# WellsFargoCSVHeatmap

./: .gitignore  README.md  main.py  pyproject.toml
HTML/: base_content.py  injector.py
frontend/: calendar.js  frequentTransactions.js  home.html
src/analysis/: recurrence.py
src/api/: api.py
src/app/: app.py
src/parsers/: parsers.py
src/statements/: parsers.py  recurrence.py  statements.py  wells_fargo.py
web/: package-lock.json  package.json
