[project]
name = "ufi"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicholas Dimidik"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
